Fix wikipedia wrapper (right margin) and modal box (text align)

--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,7 @@ body {
     margin-left: 5%; margin-right: 5%;
     margin-top: 2em; margin-bottom: 2em;
     padding: 5%;
+    padding-right: 200px;
     width: 80%;
     border-top: 1px solid #d4d4d4; border-bottom: 1px solid #d4d4d4;
     overflow: hidden;
@@ -49,6 +50,10 @@ body {
     background-image: url("../img/WikiElementBG.png");
     background-position: right top;
     background-repeat: no-repeat;
+}
+
+#wikiPreview {
+  text-align: left;
 }
 
 .comment {
